--- a/services.html
+++ b/services.html
@@ -102,7 +102,7 @@
         <div class="line"></div>
         <div class="form__content_">
             <div class="text__form_content">
-                <h2 id="name"><span>В</span>ыберите услугу ниже</h2>
+                <h2 id="name"><span>В</span>ыберите услугу ниже <samp >▼</samp></h2>
                 <div class="information__services">
                     <p id="description"></p>
                 </div>  
