--- a/monitoring.html
+++ b/monitoring.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lets Serv учебные it стенды</title>
+    <title>Lets Serv мониторинг</title>
 
     <link rel="stylesheet" href="assets/styles/index.css">
     <link rel="stylesheet" href="assets/styles/main.min.css">
@@ -28,8 +28,8 @@
             <div class="container_nav">
                 <ul>
                     <li id="activePopup"><a href="services.html"><span>У</span>слуги</a></li>
-                    <li><a href="#"><span>У</span>чебные IT стенды</a></li>
-                    <li><a href="monitoring.html"><span>М</span>ониторинг</a></li>
+                    <li><a href="stands.html"><span>У</span>чебные IT стенды</a></li>
+                    <li><a href="#"><span>М</span>ониторинг</a></li>
                     <li><a href=""><span>К</span>онтакты</a></li>
                 </ul>
             </div>
@@ -94,76 +94,104 @@
             </div>
         </div>
     </header>
-    <section class="container__stands bg_content standard_container indent">
-        <div class="contetn__stands_one standard_content content_info">   
-            <h1><span>I</span>T cтенды для обучения</h1>
-            <p><span>Э</span>то будет лучший вариант для обучения ваших учиников. 
-                Стенды сделаны из качественных материалов и прослужат вам долгое время.</p>   
-            <p><span>Н</span>а нашем канале можно посмотреть <a href="https://rutube.ru/channel/26784998/">обзоры</a></p>                  
-        </div>
-        <div class="line"></div>
-        <div class="content__stand_video">
-            <h1><span>Н</span>аши видео обзоры</h1>
-            <div class="container__video">
+    <section class="bg_content standard_container container__monitoring_about indent">
+        <div class="contetn__about_one standard_content content_info">
+            <div class="text__solving_problemsabout_content-info text_monitoring">
+                <h1><span>Ц</span>ентр IT мониторинга и реагирования на инциденты.</h1>
+                <h2><span>Берём вашу IT инфраструктуру под наше наблюдение.</span></h2>
+                <p><span>Г</span>ибко - берёте только то, что вам необходимо</p>
+                <p><span>У</span>добно - только прямой контакт без промежуточных задержек в виде систем</p>
+                <p><span>Б</span>езопасно - современные инструменты и технологии для защиты и аудита вашей инфраструктуры</p>
                 <div>
-                    <iframe width="720" height="405" src="https://rutube.ru/play/embed/203defc82fb94c08aa6715ce54d36da0/" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-                    <h2><span>У</span>чебно-тренировочный стенд видеоконтроля "ДОЗОР"</h2>
-                </div>
-                <div class="container__video_link">
-                    <a class="card__video" href="https://rutube.ru/channel/26784998/">
-                        <img src="assets/imges/рутуб.png" alt="">
-                        <p><span>У</span>чебное видео...</p>
-                    </a>
-                    <a class="card__video" href="https://rutube.ru/channel/26784998/">
-                        <img src="assets/imges/рутуб.png" alt="">
-                        <p><span>У</span>чебное видео...</p>
-                    </a>
-                    <a class="card__video" href="https://rutube.ru/channel/26784998/">
-                        <img src="assets/imges/рутуб.png" alt="">
-                        <p><span>У</span>чебное видео...</p>
-                    </a>
+                    <p><span>Д</span>ля более подробной информации по it мониторингу, закажите у нас консультацию.</p>
+                    <button>Заказать консультацию</button>
                 </div>
             </div>
         </div>
-        <div class="line"></div>
-        <div class="content__stands_shop">
-            <h1><span>Н</span>аши стенды</h1>
-            <div class="wrapper_stands">
-                <div class="card_stands">
-                    <img src="assets/imges/стенд.png" alt="">
-                    <p><span>С</span>тенд видеоконтроля "ДОЗОР" </p>
-                    <samp>Стенд для обучение и тренировки</samp>
-                    <div class="container__btn_stans">
-                        <button onclick="document.location='https://rutube.ru/video/203defc82fb94c08aa6715ce54d36da0/'">▶</button>
-                        <button>Заказать</button>
-                    </div>
+    </section>
+    <section class="container__advantages standard_container bg_content">
+        <h1 class="indent"><span>Р</span>оль центра мониторинга</h1>
+        <div class="wrapper__advantages wrapper__monitoring indent">
+            <div class="card card_1">
+                <svg class="prem__svg_monitoring" width="68" height="70" viewBox="0 0 68 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="2" y="2" width="64" height="66" rx="6" stroke="#4AFF93" stroke-width="4"/>
+                    <path d="M13 10L13 60.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M27 10L27 60.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M41 10V60.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M55 10V60.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M36 50H47" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M49 20H60" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M21 24H32" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M7 37H18" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    </svg>
+                <div>
+                    <p><span>К</span>онтроль работоспособности оборудования и систем: Мониторинг серверов, сетевого оборудования и приложений.</p>
                 </div>
-                <div class="card_stands">
-                    <img src="assets/imges/стенд.png" alt="">
-                    <p><span>С</span>тенд видеоконтроля "ДОЗОР" </p>
-                    <samp>Стенд для обучение и тренировки</samp>
-                    <div class="container__btn_stans">
-                        <button onclick="document.location='https://rutube.ru/video/203defc82fb94c08aa6715ce54d36da0/'">▶</button>
-                        <button>Заказать</button>
-                    </div>
+            </div>
+            <div class="card card_2">
+                <svg class="prem__svg_monitoring" width="68" height="70" viewBox="0 0 68 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="2" y="2" width="64" height="66" rx="6" stroke="#4AFF93" stroke-width="4"/>
+                    <path d="M23 20L23 55.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M49 20V44.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M23.0003 20C31.5003 14.4998 39 24 49.0003 20.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M23.0003 44.7645C31.5003 39.2644 39 48.7645 49.0003 44.7745" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    </svg>
+                    
+                <div>
+                    <p><span>О</span>перативное реагирование на инциденты: Быстрое выявление и устранение сбоев и проблем, возникающих в IT-инфраструктуре компании.</p>
                 </div>
-                <div class="card_stands">
-                    <img src="assets/imges/стенд.png" alt="">
-                    <p><span>С</span>тенд видеоконтроля "ДОЗОР" </p>
-                    <samp>Стенд для обучение и тренировки</samp>
-                    <div class="container__btn_stans">
-                        <button onclick="document.location='https://rutube.ru/video/203defc82fb94c08aa6715ce54d36da0/'">▶</button>
-                        <button>Заказать</button>
-                    </div>
+            </div>
+            <div class="card card_3">
+                <svg class="prem__svg_monitoring" width="68" height="70" viewBox="0 0 68 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="2" y="2" width="64" height="66" rx="6" stroke="#4AFF93" stroke-width="4"/>
+                    <path d="M14 37.02V40.02H20V37.02H14ZM20 20C20 18.3432 18.6569 17 17 17C15.3431 17 14 18.3432 14 20H20ZM20 37.02V20H14L14 37.02H20Z" fill="#4AFF93"/>
+                    <line x1="46.5355" y1="50" x2="52.9136" y2="56.3781" stroke="#4AFF93" stroke-width="5" stroke-linecap="round"/>
+                    <path d="M24 37V40H30V37H24ZM30 30C30 28.3431 28.6569 27 27 27C25.3431 27 24 28.3431 24 30H30ZM30 37V30H24V37H30Z" fill="#4AFF93"/>
+                    <path d="M35 37V40H41V37H35ZM41 25C41 23.3431 39.6569 22 38 22C36.3431 22 35 23.3431 35 25H41ZM41 37V25H35V37H41Z" fill="#4AFF93"/>
+                    <path d="M45 39V42H51V39H45ZM51 28C51 26.3431 49.6569 25 48 25C46.3431 25 45 26.3431 45 28H51ZM51 39V28H45V39H51Z" fill="#4AFF93"/>
+                    <line x1="11" y1="44.5" x2="23.02" y2="44.5" stroke="#4AFF93" stroke-width="5"/>
+                    <circle class="circle-mon" cx="37.5" cy="42.5" r="12.5" fill="#FFFFFF"/>
+                    </svg>
+                <div>
+                    <p><span>А</span>нализ инцидентов и причин их возникновения: Проведение пост-инцидентного анализа для выявления первопричин.</p>
                 </div>
-                <div class="card_stands">
-                    <img src="assets/imges/стенд.png" alt="">
-                    <p><span>С</span>тенд видеоконтроля "ДОЗОР" </p>
-                    <samp>Стенд для обучение и тренировки</samp>
-                    <div class="container__btn_stans">
-                        <button onclick="document.location='https://rutube.ru/video/203defc82fb94c08aa6715ce54d36da0/'">▶</button>
-                        <button>Заказать</button>
-                    </div>
+            </div>
+            <div class="card card_4">
+                <svg class="prem__svg_monitoring" width="68" height="70" viewBox="0 0 68 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="2" y="2" width="64" height="66" rx="6" stroke="#4AFF93" stroke-width="4"/>
+                    <path d="M56.7679 36.7678C57.7442 35.7915 57.7442 34.2085 56.7679 33.2322L40.858 17.3223C39.8817 16.346 38.2987 16.346 37.3224 17.3223C36.3461 18.2986 36.3461 19.8816 37.3224 20.8579L51.4646 35L37.3224 49.1421C36.3461 50.1184 36.3461 51.7014 37.3224 52.6777C38.2987 53.654 39.8817 53.654 40.858 52.6777L56.7679 36.7678ZM55 37.5H55.0001V32.5H55V37.5Z" fill="#4AFF93"/>
+                    <path d="M9.23213 33.2322C8.25582 34.2085 8.25582 35.7915 9.23213 36.7678L25.142 52.6777C26.1183 53.654 27.7013 53.654 28.6776 52.6777C29.6539 51.7014 29.6539 50.1184 28.6776 49.1421L14.5354 35L28.6776 20.8579C29.6539 19.8816 29.6539 18.2986 28.6776 17.3223C27.7013 16.346 26.1183 16.346 25.142 17.3223L9.23213 33.2322ZM11 32.5H10.9999V37.5H11V32.5Z" fill="#4AFF93"/>
+                    </svg>
+                <div>
+                    <p><span>Р</span>азработка и реализация контрмер против внешних угроз и уязвимостей: Оценка рисков, внедрение защитных мер.</p>
+                </div>
+            </div>
+            <div class="card card_3">
+                <svg class="prem__svg_monitoring" width="68" height="70" viewBox="0 0 68 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="2" y="2" width="64" height="66" rx="6" stroke="#4AFF93" stroke-width="4"/>
+                    <circle cx="33.5" cy="34.5" r="10" stroke="#4AFF93" stroke-width="3"/>
+                    <circle cx="34" cy="35" r="25.5" stroke="#4AFF93" stroke-width="3"/>
+                    <line x1="37.5" y1="10" x2="37.5" y2="25" stroke="#4AFF93" stroke-width="3"/>
+                    <line x1="28.5" y1="10" x2="28.5" y2="25" stroke="#4AFF93" stroke-width="3"/>
+                    <line x1="37.5" y1="44" x2="37.5" y2="59" stroke="#4AFF93" stroke-width="3"/>
+                    <line x1="28.5" y1="44" x2="28.5" y2="59" stroke="#4AFF93" stroke-width="3"/>
+                    <line x1="57.9971" y1="38.942" x2="42.9971" y2="38.942" stroke="#4AFF93" stroke-width="3"/>
+                    <line x1="58.1143" y1="29.9427" x2="43.1143" y2="29.9427" stroke="#4AFF93" stroke-width="3"/>
+                    <line x1="24" y1="38.4991" x2="9" y2="38.4991" stroke="#4AFF93" stroke-width="3"/>
+                    <line x1="24.1172" y1="29.5" x2="9.11719" y2="29.5" stroke="#4AFF93" stroke-width="3"/>
+                    </svg> 
+                <div>
+                    <p><span>П</span>оддержка непрерывной работоспособности: Оказание удалённой помощи и консультаций пользователям и IT-персоналу.</p>
+                </div>
+            </div>
+            <div class="card card_4">
+                <svg class="prem__svg_monitoring" width="68" height="70" viewBox="0 0 68 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="2" y="2" width="64" height="66" rx="6" stroke="#4AFF93" stroke-width="4"/>
+                    <path d="M35.299 15.25L56.0836 51.25C56.661 52.25 55.9393 53.5 54.7846 53.5H13.2154C12.0607 53.5 11.339 52.25 11.9164 51.25L32.701 15.25C33.2783 14.25 34.7217 14.25 35.299 15.25Z" stroke="#4AFF93" stroke-width="3"/>
+                    <path class="circle-mon" d="M35.1602 30.5455L34.9897 43.0909H33.0124L32.842 30.5455H35.1602ZM34.0011 48.1364C33.5806 48.1364 33.2198 47.9858 32.9187 47.6847C32.6175 47.3835 32.467 47.0227 32.467 46.6023C32.467 46.1818 32.6175 45.821 32.9187 45.5199C33.2198 45.2187 33.5806 45.0682 34.0011 45.0682C34.4215 45.0682 34.7823 45.2187 35.0835 45.5199C35.3846 45.821 35.5352 46.1818 35.5352 46.6023C35.5352 46.8807 35.4641 47.1364 35.3221 47.3693C35.1857 47.6023 35.0011 47.7898 34.7681 47.9318C34.5408 48.0682 34.2852 48.1364 34.0011 48.1364Z" fill="none" stroke-width="0"/>
+                    </svg>                    
+                <div>
+                    <p><span>П</span>роактивное предупреждение инцидентов: Предсказание потенциальных проблем на основе мониторинга и анализа данных.</p>
                 </div>
             </div>
         </div>
@@ -171,8 +199,8 @@
     <section class="container__form standard_container bg_content indent">
         <div class="form__content_">
             <div class="text__form_content">
-                <h1><span>З</span>акажем стенд?</h1>
-                <p><span>У</span> нас вы сможите подобрать стенды для любых нужд обучения. Стенды будыт изготовлены из качественных материалов и комплектующих.</p>
+                <h1><span>О</span>бсудим ваш проект?</h1>
+                <p><span>О</span>ставьте ваши контакты и мы ответим на все ваши вопросы, а также подберем оптимальный набор услуг, который будет соответствовать вашим потребностям.</p>
                 <div class="svg__form_content">
                     <svg width="827" height="614" viewBox="0 0 827 614" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M118.54 613.199H731.209C731.209 613.199 789.52 611.178 815.037 585.662C840.553 560.146 825.609 516.89 731.209 555.358C673.617 578.826 637.585 590.92 598.369 543.098C550.74 485.008 500.621 434.889 330.53 397.915C194.203 361.578 34.5463 401.513 5.29381 493.587C-17.3167 564.768 51.8985 613.199 118.54 613.199Z" fill="#4AFF7D"/>
@@ -208,7 +236,7 @@
                     <input type="text" placeholder="Ваше имя">
                     <input type="text" placeholder="Ваш номер телефона">
                     <input type="text" placeholder="E-mail">
-                    <input type="text" placeholder="Название стенда">
+                    <input type="text" placeholder="Компания">
                     <div style="display: flex;">
                         <input type="checkbox" checked>
                         <p><span>П</span>одтвердите отправку</p>
@@ -219,8 +247,7 @@
         </div>
     </section>
     <footer class="footer standard_container bg_content indent">
-        <h1><span>L</span>ets <span>S</span>erv</h1>
-        
+        <h1><span>L</span>ets <span>S</span>erv</h1>  
     </footer>
 </body>
 <script src="assets/js/index.js"></script>
