--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body id="bodyRemove">
     <header id="hed" class="header bg_content indent">
@@ -27,9 +27,9 @@
             <input type="button" value="темная" id="toggle-theme" />
             <div class="container_nav">
                 <ul>
-                    <li id="activePopup"><a href="services.html"><span>У</span>слуги</a></li>
+                    <li id="activePopup"><a href="#"><span>У</span>слуги</a></li>
                     <li><a href="stands.html"><span>У</span>чебные IT стенды</a></li>
-                    <li><a href=""><span>М</span>ониторинг</a></li>
+                    <li><a href="monitoring.html"><span>М</span>ониторинг</a></li>
                     <li><a href=""><span>К</span>онтакты</a></li>
                 </ul>
             </div>
