--- a/monitoring.html
+++ b/monitoring.html
@@ -125,7 +125,8 @@
                     <path d="M7 37H18" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
                     </svg>
                 <div>
-                    <p><span>К</span>онтроль работоспособности оборудования и систем: Мониторинг серверов, сетевого оборудования и приложений.</p>
+                    <h1><span>К</span>онтроль работоспособности оборудования и систем:</h1>
+                    <p><span>М</span>ониторинг серверов, сетевого оборудования и приложений.</p>
                 </div>
             </div>
             <div class="card card_2">
@@ -138,7 +139,8 @@
                     </svg>
                     
                 <div>
-                    <p><span>О</span>перативное реагирование на инциденты: Быстрое выявление и устранение сбоев и проблем, возникающих в IT-инфраструктуре компании.</p>
+                    <h1><span>О</span>перативное реагирование на инциденты:</h1>
+                    <p><span>Б</span>ыстрое выявление и устранение сбоев и проблем, возникающих в IT-инфраструктуре компании.</p>
                 </div>
             </div>
             <div class="card card_3">
@@ -153,7 +155,8 @@
                     <circle class="circle-mon" cx="37.5" cy="42.5" r="12.5" fill="#FFFFFF"/>
                     </svg>
                 <div>
-                    <p><span>А</span>нализ инцидентов и причин их возникновения: Проведение пост-инцидентного анализа для выявления первопричин.</p>
+                    <h1><span>А</span>нализ инцидентов и причин их возникновения:</h1>
+                    <p><span>П</span>роведение пост-инцидентного анализа для выявления первопричин.</p>
                 </div>
             </div>
             <div class="card card_4">
@@ -163,7 +166,8 @@
                     <path d="M9.23213 33.2322C8.25582 34.2085 8.25582 35.7915 9.23213 36.7678L25.142 52.6777C26.1183 53.654 27.7013 53.654 28.6776 52.6777C29.6539 51.7014 29.6539 50.1184 28.6776 49.1421L14.5354 35L28.6776 20.8579C29.6539 19.8816 29.6539 18.2986 28.6776 17.3223C27.7013 16.346 26.1183 16.346 25.142 17.3223L9.23213 33.2322ZM11 32.5H10.9999V37.5H11V32.5Z" fill="#4AFF93"/>
                     </svg>
                 <div>
-                    <p><span>Р</span>азработка и реализация контрмер против внешних угроз и уязвимостей: Оценка рисков, внедрение защитных мер.</p>
+                    <h1><span>Р</span>азработка и реализация контрмер против внешних угроз и уязвимостей:</h1>
+                    <p><span>О</span>ценка рисков, внедрение защитных мер.</p>
                 </div>
             </div>
             <div class="card card_3">
@@ -181,7 +185,8 @@
                     <line x1="24.1172" y1="29.5" x2="9.11719" y2="29.5" stroke="#4AFF93" stroke-width="3"/>
                     </svg> 
                 <div>
-                    <p><span>П</span>оддержка непрерывной работоспособности: Оказание удалённой помощи и консультаций пользователям и IT-персоналу.</p>
+                    <h1><span>П</span>оддержка непрерывной работоспособности:</h1>
+                    <p><span>О</span>казание удалённой помощи и консультаций пользователям и IT-персоналу.</p>
                 </div>
             </div>
             <div class="card card_4">
@@ -191,7 +196,8 @@
                     <path class="circle-mon" d="M35.1602 30.5455L34.9897 43.0909H33.0124L32.842 30.5455H35.1602ZM34.0011 48.1364C33.5806 48.1364 33.2198 47.9858 32.9187 47.6847C32.6175 47.3835 32.467 47.0227 32.467 46.6023C32.467 46.1818 32.6175 45.821 32.9187 45.5199C33.2198 45.2187 33.5806 45.0682 34.0011 45.0682C34.4215 45.0682 34.7823 45.2187 35.0835 45.5199C35.3846 45.821 35.5352 46.1818 35.5352 46.6023C35.5352 46.8807 35.4641 47.1364 35.3221 47.3693C35.1857 47.6023 35.0011 47.7898 34.7681 47.9318C34.5408 48.0682 34.2852 48.1364 34.0011 48.1364Z" fill="none" stroke-width="0"/>
                     </svg>                    
                 <div>
-                    <p><span>П</span>роактивное предупреждение инцидентов: Предсказание потенциальных проблем на основе мониторинга и анализа данных.</p>
+                    <h1><span>П</span>роактивное предупреждение инцидентов:</h1>
+                    <p><span>П</span>редсказание потенциальных проблем на основе мониторинга и анализа данных.</p>
                 </div>
             </div>
         </div>
