--- a/services.html
+++ b/services.html
@@ -96,8 +96,12 @@
     </header>
     <section class="container__form  container__services standard_container bg_content indent">
         <div class="container__about_services">
+           <div>
             <h1><span>М</span>ы предлагаем различные услуги</h1>
             <p>Ниже вы можите ознакомится с частью услуг. Если вы не сможите найти подходящюю для вас услугу, то запишитесь к нам на консультацию.</p>
+            <button>Заказать услугу</button>
+           </div>
+           <img src="assets/imges/BrowserConnection.png" alt="">
         </div>
         <div class="line"></div>
         <div class="form__content_">
