--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             <div class="svg__about_content-one">
                 <div class="sun">
                     <img src="assets/imges/Networking.png" alt="">
+                    <div></div>
                 </div>             
             </div>
         </div>
