--- a/monitoring.html
+++ b/monitoring.html
@@ -95,13 +95,16 @@
         </div>
     </header>
     <section class="bg_content standard_container container__monitoring_about indent">
-        <div class="contetn__about_one standard_content content_info">
+        <div class="contetn__about_one standard_content content_info content__info_monitoring">
             <div class="text__solving_problemsabout_content-info text_monitoring">
                 <h1><span>Ц</span>ентр IT мониторинга и реагирования на инциденты.</h1>
                 <h2><span>Берём вашу IT инфраструктуру под наше наблюдение.</span></h2>
                 <p><span>Г</span>ибко - берёте только то, что вам необходимо</p>
                 <p><span>У</span>добно - только прямой контакт без промежуточных задержек в виде систем</p>
                 <p><span>Б</span>езопасно - современные инструменты и технологии для защиты и аудита вашей инфраструктуры</p>
+            </div>
+            <div class="content__iso_text">
+                <img src="assets/imges/Node.png" alt="">
                 <div>
                     <p><span>Д</span>ля более подробной информации по it мониторингу, закажите у нас консультацию.</p>
                     <button>Заказать консультацию</button>
