--- a/stands.html
+++ b/stands.html
@@ -96,48 +96,18 @@
     </header>
     <section class="container__stands bg_content standard_container indent">
         <div class="contetn__stands_one standard_content content_info">   
-            <h1><span>I</span>T cтенды для обучения</h1>
-            <p><span>Э</span>то будет лучший вариант для обучения ваших учиников. 
-                Стенды сделаны из качественных материалов и прослужат вам долгое время.</p>   
-            <p><span>Н</span>а нашем канале можно посмотреть <a href="https://rutube.ru/channel/26784998/">обзоры</a></p>                  
-        </div>
-        <div class="line"></div>
-        <div class="content__stand_video">
-            <h1><span>Н</span>аши видео обзоры</h1>
-            <div class="container__video">
-                <div>
-                    <iframe width="720" height="405" src="https://rutube.ru/play/embed/203defc82fb94c08aa6715ce54d36da0/" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-                    <h2><span>У</span>чебно-тренировочный стенд видеоконтроля "ДОЗОР"</h2>
-                </div>
-                <div class="container__video_link">
-                    <a class="card__video" href="https://rutube.ru/channel/26784998/">
-                        <img src="assets/imges/рутуб.png" alt="">
-                        <p><span>У</span>чебное видео...</p>
-                    </a>
-                    <a class="card__video" href="https://rutube.ru/channel/26784998/">
-                        <img src="assets/imges/рутуб.png" alt="">
-                        <p><span>У</span>чебное видео...</p>
-                    </a>
-                    <a class="card__video" href="https://rutube.ru/channel/26784998/">
-                        <img src="assets/imges/рутуб.png" alt="">
-                        <p><span>У</span>чебное видео...</p>
-                    </a>
-                </div>
-            </div>
+            <div>
+                <h1><span>I</span>T cтенды для обучения</h1>
+                <p><span>Э</span>то будет лучший вариант для обучения ваших учиников. 
+                    Стенды сделаны из качественных материалов и прослужат вам долгое время.</p>   
+                <p><span>Н</span>а нашем канале можно посмотреть <a href="https://rutube.ru/channel/26784998/">обзоры</a></p>
+            </div>  
+            <img src="assets/imges/BrowserCode.png" alt="">                
         </div>
         <div class="line"></div>
         <div class="content__stands_shop">
             <h1><span>Н</span>аши стенды</h1>
             <div class="wrapper_stands">
-                <div class="card_stands">
-                    <img src="assets/imges/стенд.png" alt="">
-                    <p><span>С</span>тенд видеоконтроля "ДОЗОР" </p>
-                    <samp>Стенд для обучение и тренировки</samp>
-                    <div class="container__btn_stans">
-                        <button onclick="document.location='https://rutube.ru/video/203defc82fb94c08aa6715ce54d36da0/'">▶</button>
-                        <button>Заказать</button>
-                    </div>
-                </div>
                 <div class="card_stands">
                     <img src="assets/imges/стенд.png" alt="">
                     <p><span>С</span>тенд видеоконтроля "ДОЗОР" </p>
