--- a/index.html
+++ b/index.html
@@ -36,12 +36,20 @@
             </div>
         </div>
     </header>
-    <section class="container__about bg_content standard_container indent">
+    <section class="container__about bg_content standard_container container__bg_gradient indent">
         <div class="contetn__about_one standard_content content_info">
             <div class="text__solving_problemsabout_content-info">
                 <h1><span>L</span>ets <span>S</span>erv - это</h1>
                 <h2><span>П</span>ланирование и реализация вашей IT инфрастукруры</h2>
                 <p><span>М</span>ы  подберем вам  подходящее оборудование и настроим его под ваши нужды</p>
+                <div class="our_clients">
+                    <p>Аптека столички</p>
+                    <p>Аптека неофарм</p>
+                    <p>Самокат</p>
+                    <p>Матрикс Инжиниринг Груп</p>
+                    <p>Школы креативных индустрий</p>
+                    <p>ЦОПП</p>
+                </div>
                 <button>Заказать консультацию</button>
             </div>
             <div class="svg__about_content-one">
