--- a/monitoring.html
+++ b/monitoring.html
@@ -36,7 +36,7 @@
             </div>
         </div>
     </header>
-    <section class="bg_content standard_container container__monitoring_about indent">
+    <section class="bg_content standard_container container__monitoring_about container__bg_gradient indent">
         <div class="contetn__about_one standard_content content_info content__info_monitoring">
             <div class="text__solving_problemsabout_content-info text_monitoring">
                 <h1><span>Ц</span>ентр IT мониторинга и реагирования на инциденты.</h1>
