--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
             </div>
         </div>
     </header>
-    <section class="container__form  container__services standard_container bg_content indent">
+    <section class="container__form  container__services standard_container bg_content container__bg_gradient indent">
         <div class="container__about_services">
            <div>
             <h1><span>М</span>ы предлагаем различные услуги</h1>
