--- a/stands.html
+++ b/stands.html
@@ -36,7 +36,7 @@
             </div>
         </div>
     </header>
-    <section class="container__stands bg_content standard_container indent">
+    <section class="container__stands bg_content standard_container container__bg_gradient indent">
         <div class="contetn__stands_one standard_content content_info">   
             <div>
                 <h1><span>I</span>T cтенды для обучения</h1>
@@ -48,6 +48,7 @@
         </div>
         <div class="line"></div>
         <div class="content__stands_shop">
+            <h1><span>Н</span>аши IT cтенды</h1>
             <div class="wrapper_stands" id="wrapperCard">
                 <div class="card_stands">
                     <img src="assets/imges/st1/01_Dozor_01.png" alt="">
