--- a/monitoring.html
+++ b/monitoring.html
@@ -40,7 +40,7 @@
         <div class="contetn__about_one standard_content content_info content__info_monitoring">
             <div class="text__solving_problemsabout_content-info text_monitoring">
                 <h1><span>Ц</span>ентр IT мониторинга и реагирования на инциденты.</h1>
-                <h2><span>Берём вашу IT инфраструктуру под наше наблюдение.</span></h2>
+                <h2>Берём вашу IT инфраструктуру под наше наблюдение.</h2>
             </div>
             <div class="content__iso_text">
                 <img src="assets/imges/Node.png" alt="">
