--- a/stands.html
+++ b/stands.html
@@ -53,25 +53,25 @@
                 <div class="card_stands">
                     <img src="assets/imges/st1/01_Dozor_01.png" alt="">
                     <p><span>С</span>тенд видеоконтроля "ДОЗОР"</p>
-                    <samp>Стенд для обучение и тренировки</samp>
+                    <samp>Стенд для обучение и тренировки...</samp>
                     <div class="container__btn_stans">
-                        <button id="standOne">Заказать</button>
+                        <button id="standOne">Подробнее</button>
                     </div>
                 </div>
                 <div class="card_stands">
                     <img src="assets/imges/st3/03_Parus_01.png" alt="">
                     <p><span>С</span>тенд беспроводной сети "Парус"</p>
-                    <samp>Стенд для обучение и тренировки</samp>
+                    <samp>Стенд для обучение и тренировки...</samp>
                     <div class="container__btn_stans">
-                        <button id="standTwo">Заказать</button>
+                        <button id="standTwo">Подробнее</button>
                     </div>
                 </div>
                 <div class="card_stands">
                     <img src="assets/imges/st2/02_Kluch_01.png" alt="">
                     <p><span>С</span>тенд контроля доступа "КЛЮЧ"</p>
-                    <samp>Стенд для обучение и тренировки</samp>
+                    <samp>Стенд для обучение и тренировки...</samp>
                     <div class="container__btn_stans">
-                        <button id="standThree">Заказать</button>
+                        <button id="standThree">Подробнее</button>
                     </div>
                 </div>
             </div>
@@ -135,6 +135,10 @@
                                 <label for="slide3"></label>
                                 <label for="slide4"></label>
                                 <label for="slide5"></label>
+                            </div>
+
+                            <div class="bbtn">
+                                
                             </div>
                         </div>
                         <div class="about__stand_t">
