--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <p>Школы креативных индустрий</p>
                     <p>ЦОПП</p>
                 </div>
-                <button>Заказать консультацию</button>
+                <a class="btn_form_form" href="forms.html">Заказать консультацию</a>
             </div>
             <div class="svg__about_content-one">
                 <div class="sun">
@@ -137,7 +137,7 @@
     </section>
     <section class="container__form-contact standard_container bg_content indent">
         <h1><span>О</span>птимизируй / Созндай свою IT-инфраструктуру</h1>
-        <button>Заказать консультацию</button>
+        <a class="btn_form_form" href="forms.html">Заказать консультацию</a>
     </section>
     <section class="container__advantages standard_container bg_content">
         <h1 class="indent"><span>Н</span>аши преимущества</h1>
