--- a/services.html
+++ b/services.html
@@ -88,7 +88,7 @@
            <div>
             <h1><span>М</span>ы предлагаем различные услуги</h1>
             <p>Ниже вы можите ознакомится с частью услуг. Если вы не сможите найти подходящюю для вас услугу, то запишитесь к нам на консультацию.</p>
-            <button>Заказать услугу</button>
+            <a class="btn_form_form" href="forms.html">Заказать услугу</a>
            </div>
            <img src="assets/imges/BrowserConnection.png" alt="">
         </div>
