--- a/stands.html
+++ b/stands.html
@@ -194,7 +194,7 @@
                             </div>
                             <div class="open__card_btn-st">
                                 <button>Смотреть обзор</button>
-                                <button>Заказать стенд</button>
+                                <a class="btn_form_form" href="forms.html">Заказать стенд</a>
                             </div>
                         </div>
                     </div>
