--- a/forms.html
+++ b/forms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lets Serv планирование и реализация IT инфрастукруры</title>
+    <title>Форма обратной связи lets serv. Подберем оптимальный набор услуг, который будет соответствовать вашим потребностям.</title>
     <link rel="apple-touch-icon" sizes="180x180" href="assets/imges/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/imges/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/imges/favicon/favicon-16x16.png">
@@ -135,7 +135,7 @@
     </section>
     <footer class="footer standard_container bg_content indent">
         <h1><span>L</span>ets <span>S</span>erv</h1>
-        
+        <p>ИП Бараков Владислав Юрьевич <span>324330000012601</span></p>
     </footer>
 </body>
 <script src="assets/js/index.js"></script>
