--- a/stands.html
+++ b/stands.html
@@ -336,7 +336,7 @@
     </section>
     <footer class="footer standard_container bg_content indent">
         <h1><span>L</span>ets <span>S</span>erv</h1>
-        
+        <p>ИП Бараков Владислав Юрьевич <span>324330000012601</span></p>
     </footer>
 </body>
 <script src="assets/js/index.js"></script>
