--- a/stands.html
+++ b/stands.html
@@ -90,8 +90,8 @@
                 <p><span>Э</span>то будет лучший вариант для обучения ваших учиников. 
                     Стенды сделаны из качественных материалов и прослужат вам долгое время.</p>   
                 <p><span>Н</span>а нашем канале можно посмотреть <a href="https://rutube.ru/channel/26784998/">обзоры</a></p>
-            </div>  
-            <img src="assets/imges/BrowserCode.png" alt="">                
+            </div>    
+            <div class="img__stands_slid"></div>             
         </div>
         <div class="line"></div>
         <div class="content__stands_shop">
