--- a/stands.html
+++ b/stands.html
@@ -91,7 +91,7 @@
                     Стенды сделаны из качественных материалов и прослужат вам долгое время.</p>   
                 <p><span>Н</span>а нашем канале можно посмотреть <a href="https://rutube.ru/channel/26784998/">обзоры</a></p>
             </div> 
-            <img src="assets/imges/stand1.png" alt="">          
+            <div class="img__swap_stand"></div>         
         </div>
         <div class="line"></div>
         <div class="content__stands_shop">
