--- a/stands.html
+++ b/stands.html
@@ -96,6 +96,7 @@
                 <img class="img_2" src="assets/imges/kryg.png" alt="">
                 <img class="img_3" src="assets/imges/kv.png" alt="">
                 <img class="img_4" src="assets/imges/treygol.png" alt="">
+                <img class="img_5" src="assets/imges/Ellipse.png" alt="">
             </div>         
         </div>
         <div class="line"></div>
